<resources>
    <string name="app_name">My Application</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="input_tip">請輸入帳號密碼</string>
    <string name="btn_login">登入</string>
    <string name="forget_psd">忘記密碼</string>
    <string name="register">註冊</string>

    <string name="recommon">推薦</string>
    <string name="local">附近</string>
    <string name="input_search">輸入搜尋</string>

    <string name="lottery">抽</string>
    <string name="back">返回</string>
    <string name="draw_card">選禮物抽好友吧!</string>

    <string name="first_page">首頁</string>
    <string name="activity">活動</string>
    <string name="translate">翻譯</string>
    <string name="friend">好友</string>
    <string name="personal">個人</string>
    <string name="search">搜尋</string>
    <string name="found">發現</string>
    <string name="add_friend">加好友</string>
    <string name="chat">聊天</string>
</resources>
