<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".photo">


    <EditText
        android:id="@+id/search"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="212dp"
        android:layout_height="41dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/searchhh"
        android:drawableLeft="@android:color/darker_gray"
        android:ellipsize="middle"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btns_layout" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="15dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_btns_layout"
        app:srcCompat="@drawable/plus" />

    <LinearLayout
        android:id="@+id/bottom_btns_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/q"
            android:text="@string/first_page" />

        <Button
            android:id="@+id/active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/q"
            android:text="@string/activity" />

        <Button
            android:id="@+id/translate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/q"
            android:text="@string/translate" />

        <Button
            android:id="@+id/best"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/q"
            android:text="@string/friend" />

        <Button
            android:id="@+id/personal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/q"
            android:text="@string/personal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/friend" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:padding="5dp"
            android:text="@string/found" />

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:padding="5dp"
            android:text="@string/local" />

    </LinearLayout>

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="375dp"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="101dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_btns_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgbtn_3"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginRight="21dp"
                    android:background="@drawable/cute"
                    app:layout_constraintEnd_toStartOf="@+id/imgbtn_4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/one" />

                <ImageButton
                    android:id="@+id/imgbtn_4"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageButton6"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton2"
                    app:srcCompat="@drawable/images" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/iii"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginRight="21dp"
                    android:background="@drawable/mouse"
                    app:layout_constraintTop_toBottomOf="@+id/one" />

                <ImageButton
                    android:id="@+id/one"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/post3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ii"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="21dp"
                    android:layout_marginRight="21dp"
                    android:background="@drawable/post1"
                    app:layout_constraintTop_toBottomOf="@+id/one" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="60dp"
                    android:layout_marginRight="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/post2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>